--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,19 @@
 }
 
 #side_bar{
-    width: 100px;
+    width: 80px;
     height:calc(100vh - 100px);
-    background-color: lightseagreen;
+    background-image: url(../img/sidebar-bg.png);
+    background-color: #051E34;
+    color: white;
+}
+
+.side_bar_lg{
+    display: none;
 }
 
 #top_content{
-    width: calc(100% - 100px);
+    width: calc(100% - 80px);
     height:calc(100vh - 100px);
     background-color: lightsalmon;
 }
@@ -41,10 +47,18 @@
 
 @media screen and (min-width:992px) {
     #side_bar{
-        width: 200px;
+        width: 160px;
     }
 
     #main_content{
-        height:calc(100vh - 200px);
+        height:calc(100vh - 160px);
+    }
+
+    .side_bar{
+        display: none;
+    }
+
+    .side_bar_lg{
+        display: block;
     }
 }
