--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,14 @@ img{
     width: 25%;
 }
 
+.text_accordion{
+    font-size: .8rem; 
+}
+
+.card-body .card-text{
+    font-size: .8rem;
+}
+
 @media screen and (min-width:992px) {
     #side_bar{
         width: 160px;
